# Intel-Cryo-TEC

./: CMakeLists.txt  README.md  intel-cryo-tec.ebuild  intel-cryo-tec.service
include/common/: intel_cryo_tec_common.h
src/gui/: graphdialog.cpp  graphdialog.h  intelcryotecapp.cpp  intelcryotecapp.h  main.cpp  resources.qrc
src/standalone/: intel_cryo_tec.cpp
